[package]
name = "monkey"
description = "Interpreter for monkey langauge."
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "recursion"
harness = false

[[bench]]
name = "parser"
harness = false
